# Clematis3

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CHANGELOG.MD.bak  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  __init__.py  a.json  attestation.intoto.jsonl  dockerfile  err.txt  git-etiquette.md  healthcheck.md  oldREADME.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_bundle.json  sha256:2ca481b088b5a315f8f14023dac8b9e1fe97efd63afe33fe19b6d24ccedfa58f.jsonl
.ci/: disabled_path_config.yaml  gate_b_off.yaml  gate_b_on_nometrics.yaml  validator_strict_quiet.yaml
.data/snapshots/: state_A.json  state_AgentA.json  state_AgentB.json  state_Ambrose.json  state_agent.json  state_console.json  state_smoke.json
.data/tiny/: _store_meta.json  queries.jsonl  vectors.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml  cli-smokes.yml  cli_smoke.yml  cli_smokes.yml  disabled_identity.yml  frontend.yml  gate_b_metrics.yml  gate_d_quality_shadow.yml  homebrew_tap.yml  identity_parallel.yml  lint.yml  oci_publish.yml  parallel_smoke.yml  perf-smoke.yml  pkg_build.yml  pkg_repro.yml  pr37_quality_fusion_smoke.yml  pr40_reader_parity_smoke.yml  pr41_rq_eval_smoke.yml  pr42_docs_examples_smoke.yml  reflection_smoke.yml  snapshots_smoke.yml  soak.yml  soak_smoke.yml  strict-parity-nightly.yml  t2_reader_parity.yml  tests.yml  wheel-smoke.yml  wheels.yml
.gold_norm/: apply.jsonl  health.jsonl  t1.jsonl  t2.jsonl  t3_dialogue.jsonl  t3_plan.jsonl  t4.jsonl  turn.jsonl
.logs/: apply.jsonl  equiv_writer.jsonl  health.jsonl  t1.jsonl  t2.jsonl  t3.jsonl  t3_dialogue.jsonl  t3_plan.jsonl  t4.jsonl  turn.jsonl
.norm/: apply.jsonl  t2.jsonl  t3_dialogue.jsonl  t3_plan.jsonl
.norm/actual/: t2.jsonl  t4.jsonl  turn.jsonl
.norm/golden/: t1.jsonl
Changelog/: PreM8Hardening.txt
Formula/: clematis.rb
ci_artifacts/: sbom.cdx.json
ci_artifacts_all/dist-artifacts/: clematis-0.8.0a1-py3-none-any.whl
ci_artifacts_all/sbom-cyclonedx/: sbom.cdx.json
clematis/: __init__.py  __main__.py  cli_utils.py  errors.py  resources.py  scheduler.py
clematis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clematis/adapters/: embeddings.py  llm.py  ollama_transport.py
clematis/cli/: _config.py  _exit.py  _io.py  _resources.py  _util.py  _wrapper_common.py  bench_t4.py  chat.py  console.py  demo.py  export_logs_for_frontend.py  inspect_snapshot.py  main.py  rotate_logs.py  seed_lance_demo.py  validate.py
clematis/engine/: apply.py  cache.py  gel.py  health.py  observability_perf.py  orchestrator.py  scheduler.py  snapshot.py  types.py
clematis/examples/: README_frontend.md
clematis/graph/: store.py
clematis/io/: atomic.py  config.py  log.py  paths.py  snapshot.py
clematis/memory/: index.py  inmemory.py  lance_index.py  models.py
clematis/native/: Cargo.toml  __init__.py  gel.py  t1.py
clematis/optional/: _require.py  lancedb_support.py  zstd_support.py
clematis/scripts/: bench_reflection.py  bench_t1.py  bench_t2.py  bench_t4.py  chat.py  compute_reflection_fixture_key.py  console.py  demo.py  export_logs_for_frontend.py  inspect_snapshot.py  normalize_goldens.py  rotate_logs.py  seed_lance_demo.py  validate.py
clematis/world/: scenario.py  scheduler.py
configs/: config.yaml  validate.py
configs/prompts/: clematis_dialogue_template.txt
dist.1/: clematis-0.10.2-py3-none-any.whl
dist.2/: clematis-0.9.0a2-py3-none-any.whl
dist_local/: clematis-0.10.3-py3-none-any.whl
docs/: api_reference.md  operator-guide.md
docs/m10/: reflection.md
docs/m11/: overview.md
docs/m12/: native_t1.md
docs/m13/: config_freeze.md  error_taxonomy.md  overview.md  snapshot_freeze.md
docs/m14/: frontend.md
docs/m3/: ci_offline.md  lance.md  llm_adapter.md
docs/m7/: overview.md  rq_eval.md  troubleshooting.md
docs/m8/: canvas.md  cli.md  packaging_cli.md  scheduler.md
docs/m9/: benchmarks.md  cache_safety.md  migration.md  overview.md  parallel_helper.md
docs/refactors/: PR76
examples/: README.md  quantum_vs_wall.yaml
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json
man/: clematis-bench-t4.1  clematis-chat.1  clematis-console.1  clematis-demo.1  clematis-export-logs.1  clematis-inspect-snapshot.1  clematis-rotate-logs.1  clematis-seed-lance-demo.1  clematis-validate.1  clematis.1
packaging/: repro_env.sh
scripts/: _shim_hint.py  bench_t4.py  build_frontend.py  chat.py  ci_compare_golden.py  ci_gate_b_assert.py  console.py  examples_smoke.py  export_logs_for_frontend.py  gen_manpages.py  hashdir.py  inspect_snapshot.py  llm_smoke.py  mem_compact.py  mem_inspect.py  normalize_goldens.py  repro_check.sh  repro_check_local.sh  rotate_logs.py  rq_eval.py  rq_trace_dump.py  run_demo.py  seed_lance_demo.py  seed_tiny_shard.py  validate_config.py  validate_noop_shadow.py
tests/: conftest.py  test_apply.py  test_bench_reflection.py  test_cache_coherency.py  test_cache_guardrails.py  test_cache_legacy_lru.py  test_cli_help.py  test_config_perf_defaults.py  test_config_perf_quality.py  test_config_validate.py  test_config_validate_parallel.py  test_config_validate_parallel_agents.py  test_errors_typing.py  test_gel_disabled_path_runtime.py  test_gel_merge_split.py  test_gel_promotion.py  test_gel_update_decay.py  test_golden_path.py  test_identity_disabled.py  test_identity_disabled_path.py  test_integration_cache_after_apply.py  test_integration_t4_apply.py  test_lance_index_optional.py  test_log_rotation.py  test_memory_index_inmemory.py  test_perf_guardrails.py  test_readyset_hook.py  test_scheduler_basic.py  test_scheduler_budgets.py  test_scheduler_config_validate.py  test_scheduler_enforcement_logging.py  test_scheduler_fair_queue_aging.py  test_scheduler_fairness_max_consec.py  test_scheduler_logging.py  test_scheduler_pick_reason_passthrough.py  test_scheduler_wall_quantum.py  test_snapshot_gel_roundtrip.py  test_snapshot_inspector.py  test_snapshot_loader.py  test_snapshot_schema_lock.py  (+14 more)
(+301 files in other folders)
