[project]
name = "clematis"
version = "0.8.0a3"
description = "Clematis — deterministic mind-like simulation engine (M1–M8 baseline)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "vecipher" }]

dependencies = ["pyyaml>=6.0.1"]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vecipher/Clematis3"
Repository = "https://github.com/vecipher/Clematis3.git"
Issues = "https://github.com/vecipher/Clematis3/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.1,<2",
  "wheel>=0.43,<1",
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "ruff>=0.6,<1",
  "pyright>=1.1,<2",
  "numpy>=1.24",
  "PyYAML>=6.0"
]
test = [
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "numpy>=1.26,<2",
  "zstandard>=0.22,<0.23",
]
lancedb = [
  "lancedb>=0.8,<1",
  "pyarrow>=15,<19",
]
zstd = [
  "zstandard>=0.22,<0.23",
]
bench = [
  "numpy>=1.26,<2",
]
cli-extras = [
  "numpy>=1.26,<2",
  "lancedb>=0.8,<1",
  "pyarrow>=15,<19",
]
cli-demo = ["numpy>=1.24", "PyYAML>=6.0"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clematis", "clematis.*"]
exclude = ["clematis.fixtures", "clematis.fixtures.*", "tests", "tests.*"]
namespaces = false

[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "perf: opt-in performance tests",
  "manual: tests that require external runtimes/models or network; excluded in CI",
]

[tool.setuptools.package-data]
clematis = ["fixtures/**/*", "examples/**/*"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/*.1"]

[project.scripts]
clematis = "clematis.cli.main:main"