[project]
name = "clematis"
version = "0.8.0a4"
description = "Clematis — deterministic mind-like simulation engine (M1–M8 baseline)"
readme = "README.md"
requires-python = ">=3.11,<3.14"

license = { file = "LICENSE" }
authors = [{ name = "vecipher" }]

dependencies = ["pyyaml>=6.0.1","numpy>=1.26,<2"]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/vecipher/Clematis3"
Repository = "https://github.com/vecipher/Clematis3.git"
Issues = "https://github.com/vecipher/Clematis3/issues"
Documentation = "https://github.com/vecipher/Clematis3/blob/main/docs/m8/packaging_cli.md"
Changelog = "https://github.com/vecipher/Clematis3/blob/main/CHANGELOG.MD"

[project.optional-dependencies]
dev = [
  "build>=1.2.1,<2",
  "wheel>=0.43,<1",
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0.12.20240808,<7",
  "pre-commit>=3.8,<4",
  "numpy>=1.26,<2",
  "shtab==1.7.1",
  "pyyaml>=6.0"
]
test = [
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "numpy>=1.26,<2",
  "shtab==1.7.1",
]
lancedb = [
  "lancedb>=0.14,<1",
  "pyarrow>=15",
]
zstd = [
  "zstandard>=0.22,<0.23",
]
bench = [
  "numpy>=1.26,<2",
]
cli-extras = [
  "numpy>=1.26,<2",
  "lancedb>=0.14,<1",
  "pyarrow>=15",
]
cli-demo = ["numpy>=1.24", "pyyaml>=6.0"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clematis", "clematis.*"]
exclude = ["clematis.fixtures", "clematis.fixtures.*", "tests", "tests.*"]
namespaces = false

[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "perf: opt-in performance tests",
  "manual: tests that require external runtimes/models or network; excluded in CI",
]

[tool.setuptools.package-data]
clematis = ["fixtures/**/*", "examples/**/*", "VERSION"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/*.1"]

[project.scripts]
clematis = "clematis.cli.main:main"

# ----------------------------
# Lint & Type-checker settings
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "build", ".venv", ".v", ".eggs"]

[tool.ruff.lint]
# Keep it useful but low-pain: core error/warn sets + import sort
select = ["E", "F", "W", "I"]
ignore = [
  "E501",            # line length handled by formatter; don't fail CI on it
]

[tool.ruff.lint.per-file-ignores]
"clematis/__init__.py" = ["F401"]
"clematis/cli/__init__.py" = ["F401"]
"tests/**" = ["F401", "E402"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true
# Narrow initial scope to CLI only (per PR62)
files = ["clematis/cli"]
# Helpful, not painful at this stage
disallow_untyped_defs = false
check_untyped_defs = false
