[project]
name = "clematis"
version = "0.9.0a3"
description = "Clematis — deterministic mind-like simulation engine (M1–M8 baseline)"
readme = "README.md"
requires-python = ">=3.11,<3.14"

license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "vecipher" }]

dependencies = [
  "pyyaml>=6.0.1",
  "numpy>=1.26,<2; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vecipher/Clematis3"
Repository = "https://github.com/vecipher/Clematis3.git"
Issues = "https://github.com/vecipher/Clematis3/issues"
Documentation = "https://github.com/vecipher/Clematis3/blob/main/docs/m8/packaging_cli.md"
Changelog = "https://github.com/vecipher/Clematis3/blob/main/CHANGELOG.MD"

[project.optional-dependencies]
dev = [
  "build>=1.2.1,<2",
  "wheel>=0.43,<1",
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "ruff==0.13.2",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0.12.20240808,<7",
  "pre-commit>=3.8,<4",
  "numpy>=1.26,<2; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
  "shtab==1.7.1",
  "pyyaml>=6.0",
]
test = [
  "pytest>=8,<9",
  "hypothesis>=6,<7",
  "numpy>=1.26,<2; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
  "shtab==1.7.1",
]
bench = [
  "numpy>=1.26,<2; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
]
cli-extras = [
  "numpy>=1.26,<2; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
  "lancedb>=0.14,<1",
  "pyarrow>=15",
]
cli-demo = [
  "numpy>=1.24; python_version<'3.13'",
  "numpy>=2; python_version>='3.13'",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-rust>=1.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clematis", "clematis.*"]
exclude = ["clematis.fixtures", "clematis.fixtures.*", "tests", "tests.*"]
namespaces = false

[tool.setuptools]
include-package-data = true
zip-safe = false



[tool.setuptools-rust]

[[tool.setuptools-rust.ext-modules]]
# Python module path you will import: clematis.native._t1_rs
target = "clematis.native._t1_rs"
# Path to the Cargo manifest for this extension
path = "clematis/native/Cargo.toml"
# Binding; value per docs is lowercase
binding = "PyO3"
# Specify Python limited API for binary compatibility
py-limited-api = "cp311"
# Make the native extension optional so Python-only CI can install without Rust
optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "perf: opt-in performance tests",
  "manual: tests that require external runtimes/models or network; excluded in CI",
  "reflection: optional reflection/golden tests for M10",
  "identity: disabled-path identity and byte-equality checks",
]

[tool.setuptools.package-data]
clematis = [
  "fixtures/**/*", "examples/**/*", "VERSION",
  "native/Cargo.toml", "native/src/**/*"
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/*.1"]
"share/examples/clematis/gel" = ["examples/gel/*.yaml"]

[project.scripts]
clematis = "clematis.cli.main:main"

# ----------------------------
# Lint & Type-checker settings
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "dist", "build", ".venv", ".v", ".eggs", "clematis.egg-info", ".lancedb", ".data",
  "man", "tests/cli/goldens", ".mypy_cache", ".ruff_cache"
]

[tool.ruff.lint]
# Keep it useful but low-pain: core error/warn sets + import sort
select = ["E", "F"]
ignore = [
  "E501",            # line length handled by formatter; don't fail CI on it
]

[tool.ruff.lint.per-file-ignores]
"clematis/__init__.py" = ["F401"]
"clematis/cli/__init__.py" = ["F401"]
"clematis/memory/index.py" = ["F811"]
"clematis/engine/**" = ["F401", "E402", "I"]
"clematis/world/**"  = ["F401", "I"]
"clematis/memory/**" = ["F401", "I"]
"clematis/graph/**"  = ["F401", "I"]
"clematis/adapters/**" = ["F401", "I"]
"clematis/io/**"     = ["F401", "E402", "I"]
"configs/validate.py" = ["E402", "F841"]
"scripts/**"         = ["F401", "E402", "F841", "I"]
"scripts/gen_manpages.py" = ["E741"]
"tests/**" = ["F401", "E402", "F841", "I"]
"tests/cli/_normalize.py" = ["E741"]
"clematis/scripts/**" = ["F401", "E402", "F841", "I"]
"clematis/engine/stages/t3.py" = ["F841"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true
exclude = "(?x)(^tests/|^scripts/|^man/|^build/|^dist/)"
files = ["configs"]
# Helpful, not painful at this stage
disallow_untyped_defs = false
check_untyped_defs = false
allow_redefinition = true
